Data-Table: lowered z-index of table-header and fixed bug with checkboxes

--- a/src/app/datatable/table/table.component.less
+++ b/src/app/datatable/table/table.component.less
@@ -18,16 +18,16 @@ table{
         background: fade(#ffffff, 90%);
     }
     .tableFixedVertical{
-        z-index: 100;
+        z-index: 10;
     }
 
     thead{
         .tableFixedHorizontal{
-            z-index: 110;
+            z-index: 11;
         }
 
         .tableFixedHorizontal.tableFixedVertical{
-            z-index: 120;
+            z-index: 12;
         }
 
         .tableCell{
@@ -37,7 +37,7 @@ table{
     }
 
     tbody{
-        .tableCell{
+        td:not(.tableFixed) .tableCell{
             overflow: hidden;
             text-overflow: ellipsis;
         }
@@ -88,7 +88,7 @@ table{
     top:0;
     left:0;
     background: fade(#ffffff, 70%);
-    z-index: 1000;
+    z-index: 10;
 
     .spinner{
         position: absolute;
